# rawdata

./: .gitignore  .gitmodules  README.md  catalog.yaml  contacts.csv  hermes.sh  pyproject.toml  webui.sh
.hermes/a2a_adapter/: __init__.py  __main__.py  server.py
.hermes/plugins/loom/: __init__.py  plugin.yaml
a2a_adapter/: __main__.py  server.py
chat-ui/: requirements.txt  server.py  start.sh
chat-ui/static/: index.html
example/: schema.yaml
fox/: bidding_schema.yaml  contract_schema.yaml  convert_to_loom.py  crm_schema.yaml  customer_mgmt_schema.yaml  hr_schema.yaml  ipasset_schema.yaml  merge_to_unified.py  patch_oms_v2.py  patch_oms_v3.py  project_schema.yaml  purchase_schema.yaml  refactor_oms.py
fox-crm-all/: catalog.yaml  schema.yaml
fox-crm/bidding/: catalog.yaml  schema.yaml
fox-crm/contract/: catalog.yaml  schema.yaml
fox-crm/crm/: catalog.yaml  schema.yaml
fox-crm/customer_mgmt/: catalog.yaml  schema.yaml
fox-crm/hr/: catalog.yaml  schema.yaml
fox-crm/ipasset/: catalog.yaml  schema.yaml
fox-crm/project/: catalog.yaml  schema.yaml
fox-crm/purchase/: catalog.yaml  schema.yaml
fox-fpa/: DATA_MODEL.md  _gen_data.py  compute.yaml  views.yaml
fox-oms/: catalog.yaml  schema.yaml
loom/: cli.py
loom/commands/: compute.py  data.py  init.py  studio.py  sync.py  view.py
loom/core/: catalog.py  compute.py  git_ops.py  schema.py  store.py  views.py
loom/static/: panel.html  studio.html
patches/hermes-agent/: multimodal-image-url.patch
rawdata/: cli.py
rawdata/commands/: data.py  init.py  sync.py
rawdata/core/: git_ops.py
(+16 files in other folders)
